--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -3,42 +3,42 @@
 en:
   devise:
     confirmations:
-      confirmed: "Your email address has been successfully confirmed."
-      send_instructions: "You will receive an email with instructions for how to confirm your email address in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
+      confirmed: "メールアドレスの確認に成功しました。"
+      send_instructions: "数分後、メールアドレスの確認方法を記載したメールが届きます。"
+      send_paranoid_instructions: "お客様のメールアドレスが当社のデータベースに存在する場合、数分後にメールアドレスの確認方法を記載したメールをお送りします"
     failure:
-      already_authenticated: "You are already signed in."
-      inactive: "Your account is not activated yet."
-      invalid: "Invalid %{authentication_keys} or password."
-      locked: "Your account is locked."
-      last_attempt: "You have one more attempt before your account is locked."
-      not_found_in_database: "Invalid %{authentication_keys} or password."
-      timeout: "Your session expired. Please sign in again to continue."
-      unauthenticated: "You need to sign in or sign up before continuing."
-      unconfirmed: "You have to confirm your email address before continuing."
+      already_authenticated: "登録済みです"
+      inactive: "お客様のアカウントはまだ有効ではありません"
+      invalid: "認証キーまたはパスワードが無効です。"
+      locked: "このアカウントはロックされています"
+      last_attempt: "アカウントがロックされるまで、あと1回だけ試行できます"
+      not_found_in_database: "名前かパスワードが間違っています"
+      timeout: "セッションの有効期限が切れました。再度ログインしてください"
+      unauthenticated: "続けるには、サインインまたはサインアップする必要があります"
+      unconfirmed: "続けるには、メールアドレスの確認をしてください"
     mailer:
       confirmation_instructions:
-        subject: "Confirmation instructions"
+        subject: "確認事項"
       reset_password_instructions:
-        subject: "Reset password instructions"
+        subject: "パスワード再設定方法"
       unlock_instructions:
-        subject: "Unlock instructions"
+        subject: "ロック解除の手順"
       email_changed:
-        subject: "Email Changed"
+        subject: "メールアドレスを変更しました"
       password_change:
-        subject: "Password Changed"
+        subject: "パスワードを変更しました"
     omniauth_callbacks:
-      failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
-      success: "Successfully authenticated from %{kind} account."
+      failure: "\"%{reason}\"で%{kind}からの認証ができませんでした"
+      success: "%{kind}アカウントからの認証に成功しました"
     passwords:
-      no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
-      send_instructions: "You will receive an email with instructions on how to reset your password in a few minutes."
+      no_token: "パスワードリセットメールからでないと、このページにはアクセスできません。パスワードリセットメールからアクセスされた場合は、必ず記載されているURLの全文を使用してください。"
+      send_instructions: "パスワードの再設定方法を記載したメールが届きます"
       send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
-      updated: "Your password has been changed successfully. You are now signed in."
+      updated: "パスワードは正常に変更されました"
       updated_not_active: "Your password has been changed successfully."
     registrations:
       destroyed: "Bye! Your account has been successfully cancelled. We hope to see you again soon."
-      signed_up: "Welcome! You have signed up successfully."
+      signed_up: "ログインに成功しました"
       signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
       signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
       signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
